--- a/backend/package.json
+++ b/backend/package.json
@@ -1,31 +1,20 @@
 {
   "name": "harsha-portfolio-backend",
   "version": "1.0.0",
-  "description": "Backend API for Harsha Portfolio",
-  "type": "module",
+  "description": "Backend for Harsha Portfolio",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js"
   },
-  "keywords": ["portfolio", "api", "express", "mongodb"],
-  "author": "Harsha Vardhan",
-  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^8.0.0",
+    "mongoose": "^7.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "helmet": "^7.1.0",
-    "express-rate-limit": "^7.1.5",
-    "twilio": "^4.19.0"
+    "axios": "^1.6.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.0"
-  },
-  "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=8.0.0"
+    "nodemon": "^3.0.1"
   }
 }
