--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/drei": "^9.122.0",
-    "@react-three/fiber": "^8.18.0",
     "axios": "^1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-toastify": "^9.1.3",
-    "three": "^0.158.0"
+    "vite": "^4.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
@@ -29,7 +27,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5",
-    "vite": "^4.5.0"
+    "tailwindcss": "^3.3.5"
   }
 }
