--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "main": "backend/server.js",
   "scripts": {
     "start": "node backend/server.js",
-    "build": "npm run install-deps && npm run build-frontend",
-    "install-deps": "cd backend && npm install && cd ../frontend && npm install",
-    "build-frontend": "cd frontend && npm run build",
-    "postbuild": "echo 'Build completed. Checking contents:' && ls -la frontend/dist && echo 'Files count:' && find frontend/dist -type f | wc -l",
-    "dev": "concurrently \"cd backend && npm run dev\" \"cd frontend && npm run dev\""
+    "build": "npm run install-all && npm run build-frontend",
+    "install-all": "npm install --prefix backend && npm install --prefix frontend",
+    "build-frontend": "npm run build --prefix frontend",
+    "postbuild": "echo 'Build completed. Checking contents:' && ls -la frontend/dist && echo 'Files:' && find frontend/dist -type f",
+    "dev:backend": "npm run dev --prefix backend",
+    "dev:frontend": "npm run dev --prefix frontend",
+    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\""
   },
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=8.0.0"
   },
-  "dependencies": {
+  "devDependencies": {
     "concurrently": "^8.2.0"
   }
 }
