--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-toastify": "^9.1.3",
+    "@react-three/fiber": "^8.18.0",
+    "@react-three/drei": "^9.122.0",
+    "three": "^0.158.0",
     "vite": "^4.5.0",
     "@vitejs/plugin-react": "^4.1.0",
     "tailwindcss": "^3.3.5",
