--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,9 @@
     "tailwindcss": "^3.3.5",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
-    "terser": "^5.18.1"
+    "terser": "^5.18.1",
+    "@react-three/fiber": "^8.11.5",
+    "three": "^0.153.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
