--- a/package.json
+++ b/package.json
@@ -7,11 +7,7 @@
     "start": "node backend/server.js",
     "build": "npm run install-all && npm run build-frontend",
     "install-all": "npm install --prefix backend && npm install --prefix frontend",
-    "build-frontend": "npm run build --prefix frontend",
-    "postbuild": "echo 'Build completed. Checking contents:' && ls -la frontend/dist && echo 'Files:' && find frontend/dist -type f",
-    "dev:backend": "npm run dev --prefix backend",
-    "dev:frontend": "npm run dev --prefix frontend",
-    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\""
+    "build-frontend": "npm run build --prefix frontend"
   },
   "engines": {
     "node": ">=18.0.0",
